[CSS] Fixed img overflow in bookings

--- a/app/assets/stylesheets/components/_card_product.scss
+++ b/app/assets/stylesheets/components/_card_product.scss
@@ -19,7 +19,7 @@
 
 
 .card-product img {
-  height: 350px;
+  height: 348px;
   width: 300px;
   object-fit: cover;
 }
